Minor refactors indicated by sonar